kubernetes/projects/apps/opencloud/opencloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: opencloud
spec:
  selector:
    app: opencloud
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: opencloud-microregistry
  namespace: opencloud
spec:
  selector:
    app: opencloud
  ports:
  - name: http
    port: 80
    targetPort: microregistry
