kubernetes/projects/apps/opencloud/opencloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencloud
  namespace: opencloud
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  - name: axolotl-lan
    namespace: istio-ingress
  hostnames:
  - office.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: opencloud
      port: 80
